Closed Bug 1760811 Opened 4 years ago Closed 4 years ago

New CC markers don't show up in the profiler timeline

Categories

(Core :: JavaScript: GC, defect, P2)

defect

Tracking

()

RESOLVED FIXED
101 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox98 --- unaffected
firefox99 --- wontfix
firefox100 --- wontfix
firefox101 --- fixed

People

(Reporter: julienw, Assigned: sfink)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

I noticed the new CC markers introduced by bug 1752646, however they don't show up in the profiler timeline because they lack the "timeline-memory" location like the CC marker (see [1] where the latter is defined).

The new markers are Text Markers, that are defined in [2]. Notice how they're only displayed in the marker table and chart.

[1] https://searchfox.org/mozilla-central/rev/840881e1232f664a58b39caaae6284c7bcf121df/dom/base/CCGCScheduler.cpp#175-176
[2] https://searchfox.org/mozilla-central/rev/840881e1232f664a58b39caaae6284c7bcf121df/mozglue/baseprofiler/public/BaseProfilerMarkers.h#146-153

Before bug 1752646 they were "tracing" markers, in that case we were using the "category" field which is CC, and therefore we were reusing the schema for the CC markers, which was a bit of chance.

With Text markers we can't do that as easily, but we can match using the marker names. So you could add schemas for the names instead of the types. But I'm not so sure how this works to be honest, Gerald might know if you want to go this path.

IMO it would still be better to have a dedicated marker type for all the GC/CC markers.

Set release status flags based on info from the regressing bug 1752646

:sfink, since you are the author of the regressor, bug 1752646, could you take a look?
For more information, please visit auto_nag documentation.

Flags: needinfo?(sphink)
Has Regression Range: --- → yes
Severity: -- → S3
Priority: -- → P2
Assignee: nobody → sphink
Status: NEW → ASSIGNED
Pushed by sfink@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/ff60e1fe58d6 Make CCSlice markers show up in the timeline again r=gerald
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 101 Branch
Pushed by sfink@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/e400d29510fd Move CCSlice markers from TimelineOverview -> TimelineMemory r=gerald
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: