Bug 1760811 - Move CCSlice markers from TimelineOverview -> TimelineMemory r=gerald

Differential Revision: https://phabricator.services.mozilla.com/D144865